# timeless

./: .env.example  .mcp.json  Cargo.toml  PROMPT_BASED_ARCHITECTURE.md  README.md
config/: config.toml
data/: projects.json  status_updates.json  team_members.json  team_metrics.json
examples/: prompt_examples.sh  test_storage.rs
scripts/: build.sh  dev.sh  install-mcp.sh  run.sh  test.sh
src/: lib.rs  main.rs
src/claude/: client.rs  context.rs  mod.rs  process.rs  prompts.rs
src/cli/: commands.rs
src/config/: mod.rs
src/intelligence/: analyzer.rs  decision.rs  mod.rs
src/models/: mod.rs
src/services/: email.rs  github.rs  jira.rs  mod.rs  slack.rs
src/storage/: backup.rs  json_store.rs  mod.rs  repository.rs
src/workflows/: automation.rs  mod.rs  scheduler.rs
tests/: storage_tests.rs
