[package]
name = "timeless"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "timeless"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.0", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["serde", "v4"] }

# Terminal colors and formatting
colored = "2.0"

[[example]]
name = "test_storage"
path = "examples/test_storage.rs"

[dev-dependencies]
tempfile = "3.5"
tokio-test = "0.4"
